--- a/crates/sparkler/templates/profile_base.html
+++ b/crates/sparkler/templates/profile_base.html
@@ -211,7 +211,49 @@
                     </a>
                 </div>
             </div>
-            {% endif %} {% endif %}
+            {% endif %} {% else %}
+            <!-- anonymous actions -->
+            <div class="dropdown">
+                <button
+                    onclick="trigger('app:hook.dropdown', [event])"
+                    exclude="dropdown"
+                    class="round-lg w-full"
+                >
+                    Actions
+                    <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        viewBox="0 0 16 16"
+                        width="16"
+                        height="16"
+                        aria-label="Chevron down symbol"
+                        class="icon"
+                    >
+                        <path
+                            d="M12.78 5.22a.749.749 0 0 1 0 1.06l-4.25 4.25a.749.749 0 0 1-1.06 0L3.22 6.28a.749.749 0 1 1 1.06-1.06L8 8.939l3.72-3.719a.749.749 0 0 1 1.06 0Z"
+                        ></path>
+                    </svg>
+                </button>
+
+                <div class="inner shadow-md w-content left" exclude="dropdown">
+                    <b class="title">This user</b>
+                    <a href="javascript:report()">
+                        <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            viewBox="0 0 16 16"
+                            width="16"
+                            height="16"
+                            aria-label="Report symbol"
+                            class="icon"
+                        >
+                            <path
+                                d="M4.47.22A.749.749 0 0 1 5 0h6c.199 0 .389.079.53.22l4.25 4.25c.141.14.22.331.22.53v6a.749.749 0 0 1-.22.53l-4.25 4.25A.749.749 0 0 1 11 16H5a.749.749 0 0 1-.53-.22L.22 11.53A.749.749 0 0 1 0 11V5c0-.199.079-.389.22-.53Zm.84 1.28L1.5 5.31v5.38l3.81 3.81h5.38l3.81-3.81V5.31L10.69 1.5ZM8 4a.75.75 0 0 1 .75.75v3.5a.75.75 0 0 1-1.5 0v-3.5A.75.75 0 0 1 8 4Zm0 8a1 1 0 1 1 0-2 1 1 0 0 1 0 2Z"
+                            ></path>
+                        </svg>
+                        Report
+                    </a>
+                </div>
+            </div>
+            {% endif %}
         </div>
 
         <section id="feed" class="flex flex-col gap-2 w-full">
