--- a/crates/sparkler/templates/base.html
+++ b/crates/sparkler/templates/base.html
@@ -169,23 +169,6 @@
                             </svg>
                             Settings
                         </a>
-
-                        <hr />
-                        <a href="#" onclick="trigger('app:logout')">
-                            <svg
-                                xmlns="http://www.w3.org/2000/svg"
-                                viewBox="0 0 16 16"
-                                width="16"
-                                height="16"
-                                aria-label="Logout symbol"
-                                class="icon"
-                            >
-                                <path
-                                    d="M2 2.75C2 1.784 2.784 1 3.75 1h2.5a.75.75 0 0 1 0 1.5h-2.5a.25.25 0 0 0-.25.25v10.5c0 .138.112.25.25.25h2.5a.75.75 0 0 1 0 1.5h-2.5A1.75 1.75 0 0 1 2 13.25Zm10.44 4.5-1.97-1.97a.749.749 0 0 1 .326-1.275.749.749 0 0 1 .734.215l3.25 3.25a.75.75 0 0 1 0 1.06l-3.25 3.25a.749.749 0 0 1-1.275-.326.749.749 0 0 1 .215-.734l1.97-1.97H6.75a.75.75 0 0 1 0-1.5Z"
-                                ></path>
-                            </svg>
-                            Sign out
-                        </a>
                         {% else %}
                         <b class="title">Account</b>
 
@@ -219,6 +202,45 @@
                                 ></path>
                             </svg>
                             Sign Up
+                        </a>
+                        {% endif %}
+
+                        <!-- site stuff -->
+                        <b class="title">{{ config.name }}</b>
+
+                        <a href="/site/about">
+                            <svg
+                                xmlns="http://www.w3.org/2000/svg"
+                                viewBox="0 0 16 16"
+                                width="16"
+                                height="16"
+                                aria-label="Info symbol"
+                                class="icon"
+                            >
+                                <path
+                                    d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8Zm8-6.5a6.5 6.5 0 1 0 0 13 6.5 6.5 0 0 0 0-13ZM6.5 7.75A.75.75 0 0 1 7.25 7h1a.75.75 0 0 1 .75.75v2.75h.25a.75.75 0 0 1 0 1.5h-2a.75.75 0 0 1 0-1.5h.25v-2h-.25a.75.75 0 0 1-.75-.75ZM8 6a1 1 0 1 1 0-2 1 1 0 0 1 0 2Z"
+                                ></path>
+                            </svg>
+                            About
+                        </a>
+
+                        <!-- ... -->
+                        {% if profile.is_some() %}
+                        <hr />
+                        <a href="#" onclick="trigger('app:logout')">
+                            <svg
+                                xmlns="http://www.w3.org/2000/svg"
+                                viewBox="0 0 16 16"
+                                width="16"
+                                height="16"
+                                aria-label="Logout symbol"
+                                class="icon"
+                            >
+                                <path
+                                    d="M2 2.75C2 1.784 2.784 1 3.75 1h2.5a.75.75 0 0 1 0 1.5h-2.5a.25.25 0 0 0-.25.25v10.5c0 .138.112.25.25.25h2.5a.75.75 0 0 1 0 1.5h-2.5A1.75 1.75 0 0 1 2 13.25Zm10.44 4.5-1.97-1.97a.749.749 0 0 1 .326-1.275.749.749 0 0 1 .734.215l3.25 3.25a.75.75 0 0 1 0 1.06l-3.25 3.25a.749.749 0 0 1-1.275-.326.749.749 0 0 1 .215-.734l1.97-1.97H6.75a.75.75 0 0 1 0-1.5Z"
+                                ></path>
+                            </svg>
+                            Sign out
                         </a>
                         {% endif %}
                     </div>
