--- a/crates/sparkler/templates/global_question_timeline.html
+++ b/crates/sparkler/templates/global_question_timeline.html
@@ -48,9 +48,8 @@ block head %}
 
     <main class="flex flex-col gap-2">
         <div class="pillmenu">
-            <a href="/">Timeline</a>
+            <a href="/inbox">Inbox</a>
             <a href="/inbox/global" class="active">Global Questions</a>
-            <a href="/inbox/compose">Ask</a>
         </div>
 
         <!-- compose -->
