--- a/crates/sparkler/templates/inbox.html
+++ b/crates/sparkler/templates/inbox.html
@@ -43,6 +43,11 @@
     {% endif %}
 
     <main class="flex flex-col gap-2">
+        <div class="pillmenu">
+            <a href="/inbox" class="active">Inbox</a>
+            <a href="/inbox/global">Global Questions</a>
+        </div>
+
         {% for question in unread %}
         <div class="card-nest w-full shadow" id="question:{{ question.id }}">
             <div class="card flex flex-col gap-1">
