--- a/crates/sparkler/templates/profile_settings.html
+++ b/crates/sparkler/templates/profile_settings.html
@@ -211,5 +211,19 @@
             That primary pink-ish color when you hover over it (buttons).
         </p>
     </div>
+
+    <div class="flex flex-col gap-1">
+        <label for="sparkler:color_primary">Text primary</label>
+
+        <input
+            name="sparkler:color_text_primary"
+            id="sparkler:color_text_primary"
+            onchange="update_kv('sparkler:color_text_primary', event.target.value)"
+        />
+
+        <p class="fade">
+            Text color used on elements using the primary color as a background.
+        </p>
+    </div>
 </div>
 {% call super() %} {% endblock %}
