fix(sparkler): link filter

--- a/crates/sparkler/templates/base.html
+++ b/crates/sparkler/templates/base.html
@@ -271,7 +271,7 @@
             <div class="inner">
                 <p>Pressing continue will bring you to the following URL:</p>
                 <pre><code id="link_filter_url"></code></pre>
-                <p>Are you want to go there?</p>
+                <p>Are sure you want to go there?</p>
 
                 <hr />
                 <div class="flex gap-2">
