--- a/crates/sparkler/templates/profile_settings.html
+++ b/crates/sparkler/templates/profile_settings.html
@@ -86,6 +86,22 @@
 
     <hr />
 
+    <div
+        class="markdown-alert-important flex flex-col gap-2"
+        style="align-items: flex-start"
+    >
+        <b>Theming best practices:</b>
+
+        <ol>
+            <li>Make sure your theme is easily readable and accessible</li>
+            <li>Make sure your theme follows a coherent color scheme</li>
+            <li>
+                Make sure your theme isn't too bright or too dark, as many users
+                could be sensitive to extreme colors
+            </li>
+        </ol>
+    </div>
+
     <p>Or, you can define your own colors! Leave blank for defaults.</p>
 
     <div class="flex flex-col gap-1">
