--- a/crates/sparkler/templates/base.html
+++ b/crates/sparkler/templates/base.html
@@ -256,6 +256,7 @@
         <script>
             use("questions", () => {});
             use("responses", () => {});
+            use("comments", () => {});
             use("notifications", () => {});
 
             (() => {
