--- a/crates/sparkler/templates/profile.html
+++ b/crates/sparkler/templates/profile.html
@@ -32,6 +32,7 @@
         {% let is_pinned = true %}
         {% let show_pin_button = true %}
         {% let do_not_render_question = false %}
+        {% let show_comments = true %}
         {% include "components/response.html" %}
     <hr />
     {% endif %}
@@ -42,6 +43,7 @@
         {% let is_pinned = false %}
         {% let show_pin_button = true %}
         {% let do_not_render_question = false %}
+        {% let show_comments = true %}
         {% include "components/response.html" %} 
     {% endfor %}
 
