--- a/crates/sparkler/templates/homepage.html
+++ b/crates/sparkler/templates/homepage.html
@@ -39,6 +39,6 @@ block head %}
 
 <script>
     // logout of account (if it exists), we can only possibly see this page with an account if it was deleted
-    fetch("/api/auth/logout");
+    fetch("/api/auth/logout", { method: "POST" });
 </script>
 {% call super() %} {% endblock %}
