--- a/crates/sparkler/templates/following.html
+++ b/crates/sparkler/templates/following.html
@@ -4,6 +4,11 @@
     <b class="notification">{{ response_count }}</b>
 </a>
 
+<a href="/@{{ other.username }}/questions">
+    Questions
+    <b class="notification">{{ questions_count }}</b>
+</a>
+
 <a href="/@{{ other.username }}/followers">
     Followers
     <b class="notification">{{ followers_count }}</b>
