--- a/crates/sparkler/templates/followers.html
+++ b/crates/sparkler/templates/followers.html
@@ -4,6 +4,11 @@
     <b class="notification">{{ response_count }}</b>
 </a>
 
+<a href="/@{{ other.username }}/questions">
+    Questions
+    <b class="notification">{{ questions_count }}</b>
+</a>
+
 <a href="/@{{ other.username }}/followers" class="active">
     Followers
     <b class="notification">{{ followers.len() }}</b>
