--- a/crates/sparkler/templates/timeline.html
+++ b/crates/sparkler/templates/timeline.html
@@ -47,11 +47,18 @@ block head %}
     {% endif %}
 
     <main class="flex flex-col gap-2">
+        <div class="pillmenu">
+            <a href="/" class="active">Timeline</a>
+            <a href="/inbox/global">Global Questions</a>
+        </div>
+
         <p>Answers from people you follow (and yourself) will show up here!</p>
 
         <!-- prettier-ignore -->
         {% for response in responses %}
             {% let is_pinned = false %}
+            {% let show_pin_button = false %}
+            {% let do_not_render_question = false %}
             {% include "components/response.html" %}
         {% endfor %}
     </main>
