--- a/crates/sparkler/templates/profile_questions.html
+++ b/crates/sparkler/templates/profile_questions.html
@@ -24,7 +24,7 @@
     {% if profile.is_some() %}
     <div class="flex justify-between w-full">
         <div></div>
-        <a href="/inbox/global" class="button bold">
+        <a href="/inbox/global" class="button bold secondary">
             <svg
                 xmlns="http://www.w3.org/2000/svg"
                 viewBox="0 0 16 16"
