add(sparkler): anonymous avatar setting

--- a/crates/sparkler/templates/global_question.html
+++ b/crates/sparkler/templates/global_question.html
@@ -126,6 +126,7 @@ block head %}
                 {% let show_pin_button = false %}
                 {% let do_not_render_question = true %}
                 {% let anonymous_username = Some("anonymous") %}
+                {% let anonymous_avatar = Some("") %}
                 {% include "components/response.html" %} 
             {% endfor %}
         </div>
