--- a/crates/sparkler/templates/profile.html
+++ b/crates/sparkler/templates/profile.html
@@ -23,6 +23,7 @@
 <div id="feed" class="flex flex-col gap-2">
     <!-- prettier-ignore -->
     {% let anonymous_username = other.metadata.kv.get("sparkler:anonymous_username") %}
+    {% let anonymous_avatar = other.metadata.kv.get("sparkler:anonymous_avatar") %}
 
     <!-- pinned -->
     <!-- prettier-ignore -->
