--- a/crates/sparkler/templates/timeline.html
+++ b/crates/sparkler/templates/timeline.html
@@ -78,6 +78,7 @@ block head %}
             {% let show_pin_button = false %}
             {% let do_not_render_question = false %}
             {% let anonymous_username = Some("anonymous") %}
+            {% let anonymous_avatar = Some("") %}
             {% include "components/response.html" %}
         {% endfor %}
     </main>
