--- a/crates/sparkler/templates/components/response.html
+++ b/crates/sparkler/templates/components/response.html
@@ -4,6 +4,7 @@
         <div class="flex justify-between gap-1 question_title">
             <div class="footernav">
                 <b class="flex items-center gap-2 item">
+                    {% if response.question.author != "anonymous" %}
                     <img
                         title="{{ response.question.author }}'s avatar"
                         src="/api/v1/profiles/{{ response.question.author }}/avatar"
@@ -12,7 +13,6 @@
                         style="--size: 20px"
                     />
 
-                    {% if response.question.author != "anonymous" %}
                     <a
                         href="/@{{ response.question.author }}"
                         style="color: inherit"
@@ -20,6 +20,37 @@
                         {{ response.question.author }}
                     </a>
                     {% else %}
+                    <!-- TODO: proxy this -->
+                    {% if let Some(avatar) = anonymous_avatar %} {% if
+                    (avatar.is_empty()) | (!avatar.starts_with("https://")) %}
+                    <!-- default avatar, setting set but blank or unsafe -->
+                    <img
+                        title="{{ response.question.author }}'s avatar"
+                        src="/api/v1/profiles/{{ response.question.author }}/avatar"
+                        alt=""
+                        class="avatar round-sm"
+                        style="--size: 20px"
+                    />
+                    {% else %}
+                    <!-- anonymous avatar, setting set and valid -->
+                    <img
+                        title="This profile's anonymous avatar"
+                        src="{{ avatar }}"
+                        alt=""
+                        class="avatar round-sm"
+                        style="--size: 20px"
+                    />
+                    {% endif %} {% else %}
+                    <!-- default avatar, setting not set -->
+                    <img
+                        title="{{ response.question.author }}'s avatar"
+                        src="/api/v1/profiles/{{ response.question.author }}/avatar"
+                        alt=""
+                        class="avatar round-sm"
+                        style="--size: 20px"
+                    />
+                    {% endif %}
+
                     <!-- prettier-ignore -->
                     {% if let Some(username) = anonymous_username %}
                         {{ username }}
