--- a/crates/sparkler/templates/timeline.html
+++ b/crates/sparkler/templates/timeline.html
@@ -50,6 +50,7 @@ block head %}
         <div class="pillmenu">
             <a href="/" class="active">Timeline</a>
             <a href="/inbox/global">Global Questions</a>
+            <a href="/inbox/compose">Ask</a>
         </div>
 
         <p>Answers from people you follow (and yourself) will show up here!</p>
