--- a/crates/sparkler/templates/base.html
+++ b/crates/sparkler/templates/base.html
@@ -83,21 +83,51 @@
             </div>
 
             <div class="flex gap-1">
+                <a
+                    class="button"
+                    href="/inbox/compose"
+                    title="Compose a question"
+                >
+                    <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        viewBox="0 0 16 16"
+                        width="16"
+                        height="16"
+                        aria-label="Pencil symbol"
+                        class="icon"
+                    >
+                        <path
+                            d="M11.013 1.427a1.75 1.75 0 0 1 2.474 0l1.086 1.086a1.75 1.75 0 0 1 0 2.474l-8.61 8.61c-.21.21-.47.364-.756.445l-3.251.93a.75.75 0 0 1-.927-.928l.929-3.25c.081-.286.235-.547.445-.758l8.61-8.61Zm.176 4.823L9.75 4.81l-6.286 6.287a.253.253 0 0 0-.064.108l-.558 1.953 1.953-.558a.253.253 0 0 0 .108-.064Zm1.238-3.763a.25.25 0 0 0-.354 0L10.811 3.75l1.439 1.44 1.263-1.263a.25.25 0 0 0 0-.354Z"
+                        ></path>
+                    </svg>
+                </a>
+
                 <div class="dropdown">
                     <button
                         onclick="trigger('app:hook.dropdown', [event])"
                         exclude="dropdown"
+                        class="active"
                     >
+                        {% if let Some(profile) = profile %}
+                        <img
+                            title="{{ profile.username }}'s avatar"
+                            src="/api/v1/profiles/{{ profile.username }}/avatar"
+                            alt=""
+                            class="avatar shadow"
+                            style="--size: 24px"
+                        />
+                        {% endif %}
+
                         <svg
                             xmlns="http://www.w3.org/2000/svg"
                             viewBox="0 0 16 16"
                             width="16"
                             height="16"
-                            aria-label="Person symbol"
+                            aria-label="Chevron down symbol"
                             class="icon"
                         >
                             <path
-                                d="M10.561 8.073a6.005 6.005 0 0 1 3.432 5.142.75.75 0 1 1-1.498.07 4.5 4.5 0 0 0-8.99 0 .75.75 0 0 1-1.498-.07 6.004 6.004 0 0 1 3.431-5.142 3.999 3.999 0 1 1 5.123 0ZM10.5 5a2.5 2.5 0 1 0-5 0 2.5 2.5 0 0 0 5 0Z"
+                                d="M12.78 5.22a.749.749 0 0 1 0 1.06l-4.25 4.25a.749.749 0 0 1-1.06 0L3.22 6.28a.749.749 0 1 1 1.06-1.06L8 8.939l3.72-3.719a.749.749 0 0 1 1.06 0Z"
                             ></path>
                         </svg>
                     </button>
